feat (*): added blog section, logic for fetching posts
Adds a new blog section to the homepage, displaying recent blog posts.
The section fetches blog posts dynamically using a new `BlogSection` component and `getPosts` utility function.
Also includes new components BlogCardWrapper and related content files.

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Decap CMS</title>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-  </head>
-  <body>
+
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
       if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", function (user) {
-          if (!user) {
-            window.netlifyIdentity.on("login", function () {
-              document.location.href = "/admin/";
-            });
-          }
+        window.netlifyIdentity.on("logout", () => {
+          document.location.href = "/admin/";
         });
+
+        window.netlifyIdentity.setLocale("cs");
       }
     </script>
-    <div id="nc-root"></div>
+
+    <title>Správa obsahu</title>
+    <link rel="stylesheet" href="/app/globals.css" />
+  </head>
+  <body>
+    <!-- Include the script that builds the page and powers Decap CMS -->
+    <script src="https://unpkg.com/decap-cms@^3.6.1/dist/decap-cms.js"></script>
+
+    <!-- Add a CSS file that styles the editor preview -->
+    <script>
+      CMS.registerPreviewStyle("/admin/preview.css");
+    </script>
   </body>
 </html>
